@@ -748,13 +748,20 @@ IF(USE_OGRE)
 	# search names with "lib". This is the workaround.
 	set(CMAKE_FIND_LIBRARY_PREFIXES ${CMAKE_FIND_LIBRARY_PREFIXES} "")
     endif ()
-    set(Boost_ADDITIONAL_VERSIONS "1.53.0" "1.52.0" "1.51.0" "1.50.0" "1.49.0" "1.48.0" "1.47.0" "1.46.0" "1.45.0" "1.44.0" "1.44" "1.44.0" "1.42" "1.42.0" "1.41.0" "1.41" "1.40.0" "1.40" "1.39.0" "1.39" "1.38.0" "1.38" "1.37.0" "1.37" )
+    #set(Boost_ADDITIONAL_VERSIONS "1.53.0" "1.52.0" "1.51.0" "1.50.0" "1.49.0" "1.48.0" "1.47.0" "1.46.0" "1.45.0" "1.44.0" "1.44" "1.44.0" "1.42" "1.42.0" "1.41.0" "1.41" "1.40.0" "1.40" "1.39.0" "1.39" "1.38.0" "1.38" "1.37.0" "1.37" )
     # Components that need to be linked with. Since Ogre 1.9 we need not only boost_thread and boost_date_time, but also boost_system 
     set(OGRE_BOOST_COMPONENTS thread system date_time)
+    if(WIN32)
+      list(APPEND OGRE_BOOST_COMPONENTS chrono)
+    endif()
+    message("boost: ${OGRE_BOOST_COMPONENTS}")
     find_package(Boost COMPONENTS ${OGRE_BOOST_COMPONENTS} QUIET)
     mark_as_advanced(Boost_LIB_DIAGNOSTIC_DEFINITIONS Boost_DIR)
     if (NOT Boost_FOUND)
       set(OGRE_BOOST_COMPONENTS thread date_time)
+      if(WIN32)
+        list(APPEND OGRE_BOOST_COMPONENTS chrono)
+      endif()
       find_package(Boost COMPONENTS ${OGRE_BOOST_COMPONENTS} QUIET)
     endif()
     if (NOT Boost_FOUND)
